# ChatGPTAppTutorial

./: .gitignore  LICENSE  README.md  pyproject.toml
chapter1/: 1_call_api.py  3_def_func.py
chapter2/: 1_helloworld.py  2_html.py
chapter2/templates/: answer.html  index.html
chapter3/: 2_json.py  result_sample.json
chapter4/: 3_html_form.py  4_connect_chatgpt.py
chapter5/: 1_howto.py
chapter5/templates/: answer.html  index.html
